--- a/src/style.scss
+++ b/src/style.scss
@@ -32,10 +32,13 @@ body {
 .gallery {
   display: grid;
   grid-auto-rows: 0;
+  grid-auto-columns: 0;
   grid-template-rows: repeat(2, 1fr);
   grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: column dense;
   gap: 5px;
   background-color: red;
+  overflow: hidden;
 
   &__item {
     $item: &;
@@ -43,27 +46,27 @@ body {
     background-color: yellow;
 
     &--horizontal {
-      grid-area: 1 / 1 / 1 / 3;
-
-      & ~ & {
-        grid-area: 2 / 1 / 2 / 3;
-      }
-
-      &--vertical {
-        display: none;
-      }
+      grid-column: span 2;
     }
 
-    &-vertical {
-      grid-area: 1 / 1 / 3 / 1;
+    &--vertical {
+      grid-row: span 2;
+    }
 
-      & ~ & {
-        grid-area: 1 / 2 / 3 / 2;
-      }
+    &--left {
+      grid-column: 1;
+    }
 
-      & ~ &--horizontal {
-        display: none;
-      }
+    &--right {
+      grid-column: 2;
+    }
+
+    &--top {
+      grid-row: 1;
+    }
+
+    &--bottom {
+      grid-row: 2;
     }
 
     &--big {
